--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://replace-this-with-your-domain.com/"
+baseurl = "wibugeek.com"
 languageCode = "en-us"
 title = "WibuGeek"
 theme = "hugo-type-theme"
