--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,17 @@
-baseURL = "wibugeek.com/"
+baseurl = "https://wibugeek.com/"
 title = "WibuGeek"
-theme = "owo"
-Paginate = 7
+theme = "solit"
+#googleAnalytics = "UA-XXXXXXXX-XX" # Optional
 
 [params]
-  AuthorName = "dhamar husain"
-  GitHubUser = "dhamarhusainsm"
+  contact = "dhamarhusainsm@gmail.com" # Optional
+  dateformat = "Jan 2, 2006" # Optional
+  # Fonts settings.
+  googlefonts = "https://fonts.googleapis.com/css?family=Exo+2" # Optional, Include google fonts.
+  fontfamily = "'Exo 2', sans-serif" # Optional, Override body font family.
+  #logofontfamily = "Lobster, cursive" # Optional, Override logo font.
+  ampscripts = """ # Optional, scripts for AMP.
+<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+"""
