--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,7 @@ theme = "solit"
   googlefonts = "https://fonts.googleapis.com/css?family=Exo+2" # Optional, Include google fonts.
   fontfamily = "'Exo 2', sans-serif" # Optional, Override body font family.
   #logofontfamily = "Lobster, cursive" # Optional, Override logo font.
-  ampscripts = """ # Optional, scripts for AMP.
-<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
-<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-"""
+  ampscripts = """<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
+  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+  """
