--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ theme = "solit"
   # Fonts settings.
   googlefonts = "https://fonts.googleapis.com/css?family=Exo+2" # Optional, Include google fonts.
   fontfamily = "'Exo 2', sans-serif" # Optional, Override body font family.
-  #logofontfamily = "Lobster, cursive" # Optional, Override logo font.
+  logofontfamily = "'Exo 2', sans-serif" # Optional, Override logo font.
   ampscripts = """<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
   <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
